--- a/package.json
+++ b/package.json
@@ -21,14 +21,20 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
+    "less-loader": "^11.1.3",
+    "less-vars-to-js": "^1.3.0",
     "mini-css-extract-plugin": "^2.7.6",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "style-loader": "^3.3.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.88.2",
     "webpack-bundle-analyzer": "^4.9.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@ionic/react": "^7.3.2",
+    "less": "^4.2.0",
     "react": "^18.2.0",
     "react-cli": "^0.3.1",
     "react-dom": "^18.2.0",
