--- a/package.json
+++ b/package.json
@@ -34,10 +34,14 @@
   },
   "dependencies": {
     "@ionic/react": "^7.3.2",
+    "@reduxjs/toolkit": "^1.9.5",
+    "echarts": "^5.4.3",
     "less": "^4.2.0",
     "react": "^18.2.0",
     "react-cli": "^0.3.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.15.0",
+    "redux": "^4.2.1"
   }
 }
