--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@ionic/react": "^7.3.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "crypto-js": "^4.1.1",
     "echarts": "^5.4.3",
     "less": "^4.2.0",
     "react": "^18.2.0",
