--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "less-vars-to-js": "^1.3.0",
     "mini-css-extract-plugin": "^2.7.6",
     "style-loader": "^3.3.3",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.5",
     "webpack": "^5.88.2",
     "webpack-bundle-analyzer": "^4.9.1",
     "webpack-cli": "^5.1.4",
