--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learning_webpack",
+  "name": "my-blog-website",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://gitee.com/anlnnn/learning_webpack.git"
+    "url": "https://github.com/xywihi/my-blog-website.git"
   },
   "author": "",
   "license": "ISC",
