--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
   "dependencies": {
     "@ionic/react": "^7.3.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "echarts": "^5.4.3",
+    "express": "^4.19.2",
     "less": "^4.2.0",
     "react": "^18.2.0",
     "react-cli": "^0.3.1",
