--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "crypto-js": "^4.1.1",
     "echarts": "^5.4.3",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "less": "^4.2.0",
+    "openai": "^4.47.1",
     "react": "^18.2.0",
     "react-cli": "^0.3.1",
     "react-dom": "^18.2.0",
