--- a/package.json
+++ b/package.json
@@ -34,18 +34,21 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-react": "^6.3.0",
     "@ionic/react": "^7.3.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
-    "cors": "^2.8.5",
+    "ace-builds": "^1.33.2",
+    "ckeditor5-custom-build": "file:C:/Users/anln/Downloads/ckeditor5-custom-build",
     "crypto-js": "^4.1.1",
     "echarts": "^5.4.3",
-    "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "less": "^4.2.0",
     "openai": "^4.47.1",
     "react": "^18.2.0",
+    "react-ace": "^11.0.1",
     "react-cli": "^0.3.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
